--- a/NotesTaker/package.json
+++ b/NotesTaker/package.json
@@ -6,12 +6,17 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
